[package]
name = "ProcessScheduler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
uuid = {version = "1.3.0",features = ["v4","fast-rng", "macro-diagnostics"]}